src/test/ui/macros/macro-path-prelude-fail-4.rs
#[derive(inline)] //~ ERROR expected a macro, found built-in attribute
struct S;

fn main() {}
